--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
     - images/netflix-logo-sm.png
     - images/netflix-logo.png
     - images/jabaek.jpeg
+    - images/wakanda.jpeg
+    - images/black-panther2.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
